# Term_Project_Cell_Devs

./: .gitignore  CMakeLists.txt  README.md  generate_scenarios.py  main.cpp  qgis_pipeline.py  run_all_scenarios.sh  scenario.cpp  scenario.json  visualize_wildfire.py
include/: coupled.hpp  json_grid_logger.hpp  json_logger.hpp  scenario.hpp  vicinity.hpp  wildfire_cell.hpp  wildfire_state.hpp
qgis_plugin/wildfire_celldevs/: wildfire_plugin.py
results/: grid_log_fortmcmurray_spot.csv
scenarios/: scenario_firebreak_spot.json  scenario_fortmcmurray_spot.json
simulation_results/: summary.csv  wildfire.csv
simulation_results/run1/: summary.csv
test_scenarios/: coastal_windy.json  dense_forest_drought.json  dry_grassland_high_wind.json  dry_grassland_low_wind.json  firebreak_test.json  mountain_slope_fire.json  urban_interface.json
tools/: CMakeCache.txt
